Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam consequuntur inventore vero quisquam veritatis totam nam corporis animi est velit adipisci, voluptatum reprehenderit nobis perspiciatis autem repudiandae nihil explicabo?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aperiam consequuntur inventore vero quisquam veritatis totam nam corporis animi est velit adipisci, voluptatum reprehenderit nobis perspiciatis autem repudiandae nihil explicabo </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus porro vel maiores! Aliquam veniam vel facilis omnis? Exercitationem, ut laboriosam? Vero eveniet inventore veritatis deleniti magnam, recusandae porro quis in?</p>
 </body>
 </html>
